[gd_scene load_steps=22 format=3 uid="uid://brf47068ghctn"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_t5sf5"]
[ext_resource type="Resource" uid="uid://qcxoh4lago3k" path="res://scripts/inventory/player_normal_inventory.tres" id="2_anirl"]
[ext_resource type="Resource" uid="uid://43vov6ny3abg" path="res://scripts/inventory/player_implant_inventory.tres" id="3_s841s"]
[ext_resource type="Texture2D" uid="uid://cgol46545su07" path="res://textures/player_spritesheet.png" id="4_nvdvj"]
[ext_resource type="Script" path="res://scripts/player/player_arms.gd" id="5_0xsfp"]
[ext_resource type="Resource" uid="uid://cw45ii2fqvsoq" path="res://scripts/items/utilities/health_stim.tres" id="6_t1hn4"]
[ext_resource type="Resource" uid="uid://cnbyybre43ha" path="res://scripts/items/weapons/bullet/machine_gun.tres" id="7_mvu64"]
[ext_resource type="Resource" uid="uid://cc22cnursu27t" path="res://scripts/items/weapons/shell/blunderbuss.tres" id="8_48g2f"]
[ext_resource type="Script" path="res://scripts/player/states/state_machine/action_state_machine.gd" id="9_oj28s"]
[ext_resource type="Script" path="res://scripts/player/states/state_machine/state_machine.gd" id="10_pxoct"]
[ext_resource type="Script" path="res://scripts/player/states/player_state_idle.gd" id="11_5otbp"]
[ext_resource type="Script" path="res://scripts/player/states/player_state_run.gd" id="12_n5gtx"]
[ext_resource type="PackedScene" uid="uid://dpga2pevde8nm" path="res://scenes/ui/reloading_progress_bar.tscn" id="14_413ej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw51x"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feijq"]
size = Vector2(10, 14)

[sub_resource type="Animation" id="Animation_mlqe8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_y60d7"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(10, 0)]
}

[sub_resource type="Animation" id="Animation_1dkh0"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_fbmgj"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_ixc0m"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84kpj"]
_data = {
"RESET": SubResource("Animation_mlqe8"),
"fall": SubResource("Animation_y60d7"),
"idle": SubResource("Animation_1dkh0"),
"jump": SubResource("Animation_fbmgj"),
"run": SubResource("Animation_ixc0m")
}

[node name="main_player" type="CharacterBody2D" node_paths=PackedStringArray("player_hands") groups=["Player"]]
collision_layer = 2
script = ExtResource("1_t5sf5")
SPEED = 86.0
JUMP_VELOCITY = -320.0
player_hands = NodePath("hands")
normal_inventory = ExtResource("2_anirl")
implant_inventory = ExtResource("3_s841s")

[node name="body" type="Sprite2D" parent="."]
texture = ExtResource("4_nvdvj")
hframes = 11

[node name="hands" type="Node2D" parent="." node_paths=PackedStringArray("holding_sprite", "reload_progress_bar") groups=["Player"]]
script = ExtResource("5_0xsfp")
holding_sprite = NodePath("holding_item")
utility_item = ExtResource("6_t1hn4")
primary_weapon = ExtResource("7_mvu64")
secondary_weapon = ExtResource("8_48g2f")
max_bullets = 68
max_shells = 42
max_energy = 72
reload_progress_bar = NodePath("../reload_progress_bar")

[node name="holding_item" type="Sprite2D" parent="hands"]
position = Vector2(6, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lw51x")

[node name="ActionStateMachine" type="Node" parent="."]
script = ExtResource("9_oj28s")

[node name="StateMachine" type="Node" parent="." groups=["Player"]]
script = ExtResource("10_pxoct")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("11_5otbp")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("12_n5gtx")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("RectangleShape2D_feijq")
debug_color = Color(0.984314, 0, 0.352941, 0.0588235)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_84kpj")
}

[node name="reload_progress_bar" parent="." instance=ExtResource("14_413ej")]
offset_left = -8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = -12.0

[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
